2001-05-04  Sam Steingold  <sds@gnu.org>

	Added compile-time signature checking in function calls
	* compiler.lisp (c-source-location): 2 optional arguments
	(c-source-point, c-source-point-location, current-function,
	get-signature, sig-to-list, inline-lambdabody,
	inline-callable-lambdabody-p, lambda-list-to-signature,
	match-known-unknown-functions, in-defun-p): new functions
	(c-warn): use C-COMMENT and CURRENT-FUNCTION
	(c-error): use CURRENT-FUNCTION
	(signature): new defstruct
	(function-signature, signature-to-list): moved here from
	 describe.lisp
	(test-argument-syntax): reindented
	(c-DIRECT-FUNCTION-CALL, pass2): translated the comments
	(c-GLOBAL-FUNCTION-CALL, C-APPLY): always check the signature
	 always call NOTE-FUNCTION-USED, not just when compiling a file;
	 use INLINE-CALLABLE-LAMBDABODY-P and INLINE-LAMBDABODY
	(note-function-used): keep the arguments too
	(c-DEFUN): check the signature using *KNOWN-FUNCTIONS*
	(inline-callable-function-p): use INLINE-CALLABLE-LAMBDABODY-P
	(c-FUNCTION): always call NOTE-FUNCTION-USED
	(c-report-problems): use MATCH-KNOWN-UNKNOWN-FUNCTIONS
	(compile-file): call C-REPORT-PROBLEMS before reporing
	 *ERROR-COUNT* and *WARNING-COUNT*
	(c-form): use IN-DEFUN-P
	* clos.lisp: import SIGNATURE structure from COMPILER and use
	 them instead of simple lists throughout the file
	* constobj.d (version): bumped (generic functions use SIGNATUREs
	 instead of lists to store their signatures)
	* describe.lisp (function-signature, signature-to-list):
	 moved to compiler.lisp
	(arglist): use SIG-TO-LIST and GET-SIGNATURE to accomodate
	 possible future modifications
	* foreign1.lisp (DEF-CALL-OUT, DEF-LIB-CALL-OUT):
	 pass signature to C-DEFUN
	(argvector-to-signature, count-inarguments): new functions
	(foreign-function-signature): renamed to
	 FOREIGN-FUNCTION-IN-ARG-COUNT
	* init.lisp (defun): pass signature to C-DEFUN

2001-05-01  Sam Steingold  <sds@gnu.org>

	* type.lisp (subtypep): handle types NIL and T specially